# Underpass-API

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Gemfile  README.md  config.ru  dev.d.ts  dev.d.ts.map  docker-compose-base.yaml  docker-compose.yaml  index.d.ts  index.d.ts.map  index.html
.github/workflows/: ci.yaml
backends/: duckdb_quackosm.md  duckdb_quackosm.rb  duckdb_quackosm.sql  postgres_osmosis.md  postgres_osmosis.rb  postgres_osmosis.sql  postgres_osmosis_init.sql
backends/duckdb_quackosm/: README.md  docker-compose.yaml  duckdb_quackosm.rb  view.sql
backends/duckdb_quackosm/docker/quackosm/: Dockerfile
backends/postgres_osm2pgsql/: README.md  docker-compose.yaml  geometries-alone.lua  postgres_osm2pgsql.rb  view.sql
backends/postgres_osm2pgsql/docker/osm2pgsql/: Dockerfile
backends/postgres_osmosis/: README.md  docker-compose.yaml  postgres_osmosis.rb
backends/postgres_osmosis/docker/osmosis/: Dockerfile
backends/postgres_osmosis/docker/postgres/docker-entrypoint-initdb.d/: 01_create-hstore.sql
backends/postgres_osmosis/test/: output.rb
src/: backend.rs  main.rs  main_init.rs  main_serve.rs  query.rs
src/duckdb_quackosm/: README.md  docker-compose.yaml  init.sql  mod.rs  view.sql
src/duckdb_quackosm/docker/quackosm/: Dockerfile
src/postgres_osmosis/: README.md  docker-compose.yaml  init.sql  mod.rs  view.sql
test/: output.rb
underpass-wasm/: .env.template  Cargo.toml  README.md  data  index.html  package.json  tsconfig.json  vite.config.ts
underpass-wasm/src/: dev.ts  index.ts  lib.rs
(+1 files in other folders)
